adicionando segundo exercício/retirando erros

--- a/trabalho 1/style.css
+++ b/trabalho 1/style.css
@@ -15,7 +15,7 @@ body {
     background-color: #fff;
 }
 #game-Canvas{
-    /Define a aparência da área do jogo/
+    /*Define a aparência da área do jogo*/
     background-color : #e0e0e0;
     display : block;
 }
